# dalm1term

./: .gitignore  LICENSE  README.md  app.cjs  app.js  index.html  package-lock.json  package.json  tauri.js  vite.config.js
src/: App.css  App.jsx  Terminal.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
